quality assurance of the last commit

--- a/app/views/about/murrow_collection.html.erb
+++ b/app/views/about/murrow_collection.html.erb
@@ -35,7 +35,7 @@
         photographs. The papers also include about 1700 books, memorabilia as well as audiovisual material.</p>
         <p>
           You can read more about
-          <a href="http://dca.lib.tufts.edu/features/murrow/exhibit/">Edward R. Murrow at The Life and Work of Edward R. Murrow: and Archives Exhibit</a>. You can read
+          Edward R. Murrow at <a href="http://dca.lib.tufts.edu/features/murrow/exhibit/">The Life and Work of Edward R. Murrow: an Archives Exhibit</a>. You can read
           more about both the digitized and non-digitized materials from the collection by reading <a href="/catalog/ead/tufts:UA069.001.DO.MS025">the finding aid</a>. Or
           you can dive right into the <a href="/catalog?f[collection_facet][]=Edward+R.+Murrow%2C+papers%2C+1927-65&search_field=all_fields&utf8=%E2%9C%93">digitized materials from the collection</a>, where we have
           <a href="/catalog?f[collection_facet][]=Edward+R.+Murrow%2C+papers%2C+1927-65&f[object_type_facet][]=Images&search_field=all_fields&utf8=%E2%9C%93">331 images</a> and <a href="/catalog?f[collection_facet][]=Edward+R.+Murrow%2C+papers%2C+1927-65&f[object_type_facet][]=Audio&search_field=all_fields&utf8=%E2%9C%93">574 transcribed audio recordings from episodes of <cite>This I
