--- a/app/views/about/tufts_local_history.html.erb
+++ b/app/views/about/tufts_local_history.html.erb
@@ -36,7 +36,7 @@
         <h4>Photographs</h4>
         <ul>
           <li><a href="/catalog/tufts:UA069.001.DO.MS036">Melville Munro</a> was the University photographer documenting Tufts from World War I through World War II.</li>
-          <li><a href="/catalog/tufts:UA069.001.DO.MS156">Louise Young</li> was the University photographer documenting Tufts from 1947 until 1965.</li> 
+          <li><a href="/catalog/tufts:UA069.001.DO.MS156">Louise Young</a> was the University photographer documenting Tufts from 1947 until 1965.</li> 
           <li><a href="/catalog/tufts:UA069.001.DO.UA206">The University Photography department</a> has documented Tufts since 2005</li>
           <li><a href="/catalog/tufts:UA069.001.DO.MS054">Edwin B. Rollins’ photographs</a> document buildings on the Medford campus.</li>
           <li><a href="/catalog/tufts:UA069.001.DO.MS002">The P.T. Barnum papers</a> include images of Jumbo and Barnum Hall.</li>
@@ -49,7 +49,7 @@
           <li><a href="/catalog/tufts:UA069.001.DO.UA065">Photographs from <cite>The Jumbo</cite></a> features images from the Centennial supplement to the Tufts undergraduate yearbook, published in 1952.</li>
           <li><a href="/catalog/tufts:UA069.001.DO.MS024">The MacJannett papers</a> house 725 photographs from the MacJannett family pictures, which include images from the Tufts campus at Talloires.</li>
           <li><a href="/catalog/tufts:UA069.001.DO.UA068">The Pen, Paint, and Pretzels photographs</a> show images from University dramatic productions.</li>
-          <li><a href="/catalog/tufts:UA069.001.DO.UA176">Hundreds of photographs from the archives of the Tufts Daily</a> are available online</li>
+          <li>Hundreds of <a href="/catalog/tufts:UA069.001.DO.UA176">photographs from the archives of the Tufts Daily</a> are available online</li>
         </ul>
         <h4>Periodicals</h4>
 
