--- a/app/views/about/e_scholarship.html.erb
+++ b/app/views/about/e_scholarship.html.erb
@@ -41,7 +41,7 @@
               <li><a
               href="/catalog?f[collection_facet][]=Undergraduate+scholarship&search_field=all_fields&utf8=%E2%9C%93#">Undergraduate
               scholarship</a>. This collection is primarily
-              composed of undergraduate honors theses. Hand:
+              composed of undergraduate honors theses. Hint:
               expand the "Subject" facet in the left-hand
               navigation for a glimpse at the departments from
               which these papers originate. </li>
@@ -50,7 +50,7 @@
           papers digitally for submission into the digital
           library at the <a
           href="https://dca.lib.tufts.edu/submissions/deposit_submission/">TDL
-          deposit form. For all other deposits, including
+          deposit form</a>. For all other deposits, including
           capstone projects, dissertations,  manuscripts
           collections, etc., please see the <a
           href="http://sites.tufts.edu/dca/submitting-materials/">DCA
