TDLR-333 putting a message saying that we are in beta on the top navigation bar

--- a/app/views/layouts/tdl-bootstrap.html.erb
+++ b/app/views/layouts/tdl-bootstrap.html.erb
@@ -83,6 +83,7 @@
       <!--   <a class="brand" href="./index.html">Tufts Digital Library</a> -->
       <div class="nav-collapse">
         <ul class="nav">
+          <li>BETA</li>
           <li
           <%- if "search" == @current_action -%> class="active"
           <%- end -%>><%= link_to "Search", '/search' %></li>
