--- a/app/views/layouts/tdl-bootstrap.html.erb
+++ b/app/views/layouts/tdl-bootstrap.html.erb
@@ -83,7 +83,6 @@
       <!--   <a class="brand" href="./index.html">Tufts Digital Library</a> -->
       <div class="nav-collapse">
         <ul class="nav">
-          <li>BETA</li>
           <li
           <%- if "search" == @current_action -%> class="active"
           <%- end -%>><%= link_to "Search", '/search' %></li>
@@ -110,8 +109,9 @@
 
   <div class="page-header">
 
-
-    <%= link_to(image_tag('/assets/img/tuftsdigitallibrarylogosmall.png', :alt => "Tufts Digital Library logo"), catalog_path('/'), :class => "work") %>
+    <div>
+    <%= link_to(image_tag('/assets/img/tuftsdigitallibrarylogosmall.png', :alt => "Tufts Digital Library logo"), catalog_path('/'), :class => "work") %><span><p class="beta">BETA</p></span>
+    </div>
     <%- if "show" == @current_action || "eadoverview" == @current_action || "eadinternal" == @current_action || "transcriptonly" == @current_action -%>
         <button href="#comment_modal" data-toggle="modal" class="btn btn-blue pull-right" style="margin-top:10px; margin-right:10px;"> Comments about this page?
           <i class="icon-comment icon-white"></i></button>
