--- a/public/assets/css/tdl-bootstrap-overrides.css
+++ b/public/assets/css/tdl-bootstrap-overrides.css
@@ -1,7 +1,18 @@
 /*!
  * Altered by Cole Latimer for Tufts University Digital Library: This version is hosted on my personal site for testing and display purposes only.
 */
+.beta {
+    font-size: 15px;
+    display: inline;
+    margin-top: 25px;
+    margin-left: 5px;
+    color: #B99F30;
+    text-align: center;
+    vertical-align: top;
+    font-weight: bold;
 
+
+}
 body {
     background-color: #ffffff;
     margin: 0;
