code to complete voting record views

--- a/app/views/tufts_voting_records/_show.html.erb
+++ b/app/views/tufts_voting_records/_show.html.erb
@@ -22,8 +22,8 @@
   </div>
   <div class="span6">
     <div class="tooltip-demo well "><p>View voting record:</p>
-      <h5><a href="#"><%= show_title() %></a> <i class="icon-arrow-right margintoparrow"> </i></h5>
-          Short description of election records and portal.
+      <h5><a href="<%= show_elections_link( params[:id]) %>"><%= show_title() %></a> <i class="icon-arrow-right margintoparrow"> </i></h5>
+      <strong>A New Nation Votes</strong> is a searchable collection of election returns from the earliest years of American democracy. The data were compiled by Philip Lampi, and are made available online by The American Antiquarian Society and Tufts University Digital Collections and Archives, with funding from the National Endowment for the Humanities. The election records have a dedicated portal which allows you to narrow your search by candidate, office, year, or state.
     </div>
   </div>
 </div>
