code to finish off boston streets

--- a/app/views/tufts_tei_fragmenteds/_show.html.erb
+++ b/app/views/tufts_tei_fragmenteds/_show.html.erb
@@ -18,11 +18,11 @@
 <div class="row">
   <div class="span6">
     <br>
-    <center><img alt="" src="/assets/img/elections.png"></center>
+    <center><img alt="" src="/assets/img/boston_streets.png"></center>
   </div>
   <div class="span6">
-    <div class="tooltip-demo well "><p>View voting record:</p>
-      <h5><a href="<%= show_streets_link( params[:id]) %>"><%= show_title() %></a> <i class="icon-arrow-right margintoparrow"> </i></h5>
+    <div class="tooltip-demo well "><p>View:</p>
+      <h5><a href="<%= show_streets_link(params[:id]) %>"><%= show_title() %></a> <i class="icon-arrow-right margintoparrow"> </i></h5>
 <strong>Boston Street</strong> combines photographs, maps, and city directories to present a new view of the geography and people of Boston between 1845-1898. This project was developed by the Tufts University Digital Collections and Archives with support from IMLS and The Bostonian Society.
     </div>
   </div>
