Fixed a bug from the JW Player work -- audio without transcript was broken.

--- a/app/views/tufts_audio_texts/_show.html.erb
+++ b/app/views/tufts_audio_texts/_show.html.erb
@@ -18,7 +18,7 @@
 
   <div class="row">
     <div class="span6">
-      <%= raw Tufts::AudioMethods.show_audio_player(params[:id]) %><br>
+      <%= raw Tufts::AudioMethods.show_audio_player(params[:id], true) %><br>
       <br>
       <div class="participant_div">
         <b>Interview Participants</b><br>
