TDLR-339, a broken link on the Tufts_local_history page was breaking the link to the medical school yearbooks

--- a/app/views/about/tufts_local_history.html.erb
+++ b/app/views/about/tufts_local_history.html.erb
@@ -57,7 +57,7 @@
           sampled here.</p>
         <ul>
           <li><a href="/catalog/tufts:UA069.001.DO.UA176"><cite>The Tufts Daily</cite></a> is available online from 1980 to 2009.</li>
-          <li><a href="/catalog/tufts:UA069.001.DO.UP137"><cite>Outbreath</cite>, a literary magazine, has digitized copies from 2008 on.</li>
+          <li><a href="/catalog/tufts:UA069.001.DO.UP137"><cite>Outbreath</cite></a>, a literary magazine, has digitized copies from 2008 on.</li>
           <li>Over 45 years worth of the medical school's yearbook, <a href="/catalog/tufts:UA069.001.DO.UP150"><cite>Caduceus</cite></a>, have been made available online.</li>
 
         </ul>
