--- a/app/views/tufts_faculty_publications/_image_pane.html.erb
+++ b/app/views/tufts_faculty_publications/_image_pane.html.erb
@@ -1,6 +1,6 @@
 <ul class="thumbnails">
   <li class="span6">
-    <a class="thumbnail" href="#">
+    <a class="thumbnail" href="<%= render_book_viewer_path(params[:id]) %>">
       <%= showPdfImage(params[:id]) %>
     </a>
     <br>
