--- a/app/views/layouts/tdl-bootstrap.html.erb
+++ b/app/views/layouts/tdl-bootstrap.html.erb
@@ -9,9 +9,11 @@
 
   <!-- Le styles -->
   <link href="/assets/css/bootstrap.css" rel="stylesheet">
+
   <link href="/assets/css/tdl-bootstrap-overrides.css" rel="stylesheet">
   <link href="/assets/css/facets.css" rel="stylesheet">
   <script src="/assets/js/jquery.js"></script>
+  <script src="/javascripts/blacklight/blacklight.js"></script>
   <script src="/javascripts/read_more_or_less.js"></script>
 
   <!-- Le HTML5 shim, for IE6-8 support of HTML5 elements -->
@@ -179,7 +181,7 @@
 <div class="modal fade" id="more_facets_modal">
   <div class="modal-header">
     <button class="close" data-dismiss="modal">×</button>
-    <h3>Send Comment<%= ("show" == @current_action || "eadoverview" == @current_action || "eadinternal" == @current_action || "transcriptonly" == @current_action) ? " about " + show_title().to_s().strip! : "" %></h3>
+    <h3>More Facets</h3>
   </div>
   <div class="modal-body">
 
@@ -219,8 +221,8 @@
 </div>   <!--end modal -->
 
 <script type="text/javascript">
-    //if js is enabled rewrite the more_facets links to be inline modals.
-    $('.more_facets_link').attr('href','#more_facets_modal');
+  //if js is enabled rewrite the more_facets links to be inline modals.
+//    $('.more_facets_link').attr('href','#more_facets_modal');
 
     $('.toggle:not(.toggle-close):lt(1)').addClass('toggle-open');//.parents('li').children('ul').hide();
     $('.menutop:not(.toggle-close):lt(1)').addClass('toggle-open');//.parents('li').children('ul').hide();
@@ -269,7 +271,5 @@
 <script src="/assets/js/bootstrap-typeahead.js"></script>
 <script src="/assets/js/application.js"></script>
 <script src="/javascripts/feedback.js"></script>
-
-
 </body>
 </html>
