TDLR-342 view online materials

--- a/app/views/tufts_eads/_show.html.erb
+++ b/app/views/tufts_eads/_show.html.erb
@@ -15,7 +15,7 @@
 
       <div class="span5 offset1">
         <div class="tooltip-demo well">
-          <a href="#"><h5>View Online Materials <i class="icon-arrow-right margintoparrow"></i></h5></a>
+          <a href="/catalog?f[collection_id_facet][]=<%= params[:id] %>"><h5>View Online Materials <i class="icon-arrow-right margintoparrow"></i></h5></a>
           <p>Some of the materials from this collection are available online. Not all materials have necessarily been digitized. <a href="<%= raw Tufts::EADMethods.finding_aid_url(@document_fedora) %>">View the finding aid</a> or <a href="/contact">contact DCA</a> for more information.</p>
           <br>
           <a href="<%= raw Tufts::EADMethods.finding_aid_url(@document_fedora) %>"><h5>View Finding Aid <i class="icon-arrow-right margintoparrow"></i></h5></a>
