--- a/app/views/shared/_search_form.html.erb
+++ b/app/views/shared/_search_form.html.erb
@@ -4,5 +4,7 @@
         <%= select_tag(:search_field, options_for_select(search_fields, h(params[:search_field])), :title => "Targeted search options", :class => "span2") %>
     <% end %>
     <button type="submit" class="btn">Search</button>&nbsp;
-    <%= link_to 'Advanced Search', params.merge(:controller => "advanced", :action => "index"), :class => "advanced_search" %>
+    <% unless "search" == @current_action %>
+        <%= link_to 'Advanced Search', params.merge(:controller => "advanced", :action => "index"), :class => "advanced_search" %>
+    <% end %>
 <% end %>
