--- a/app/views/catalog/_search.html.erb
+++ b/app/views/catalog/_search.html.erb
@@ -1,3 +1,5 @@
+<% @page_title = "Basic Search - #{application_name}" %>
+
   <div class="row-fluid">
     <%= render :partial => 'facet_nav' %>
     <div class="span7">
