--- a/app/views/tufts_teis/_show.html.erb
+++ b/app/views/tufts_teis/_show.html.erb
@@ -17,7 +17,7 @@
 
 
   <div class="span6">
-    <%= render :partial => 'shared/metadata_pane', :locals => {:metadata => metadata} %>
+    <%= render :partial => 'tufts_teis/metadata_pane', :locals => {:metadata => metadata} %>
   </div>
 
 
