mostly work on correct toc rendering, and ability to render chapters

--- a/app/views/tufts_teis/_bookreader_pane.html.erb
+++ b/app/views/tufts_teis/_bookreader_pane.html.erb
@@ -6,7 +6,7 @@
 </div>
 <% end %>
 
-<%= raw Tufts::TeiMethods.show_tei(@document_fedora) %>
+<%= raw Tufts::TeiMethods.show_tei(@document_fedora,params[:chapter]) %>
 
 <% if false %>
 <h6> Chapter X: Covent Garden Section II: Covent Garden Market</h6>
