blue line and spacing changes from ilene

--- a/app/views/layouts/tdl-bootstrap.html.erb
+++ b/app/views/layouts/tdl-bootstrap.html.erb
@@ -76,7 +76,7 @@
 </head>
 <body data-spy="scroll" data-target=".subnav" data-offset="50">
 
-
+<div class="blueline"></div>
 <!-- Navbar
 ================================================== -->
 <div class="navbar">
