--- a/public/assets/css/tdl-bootstrap-overrides.css
+++ b/public/assets/css/tdl-bootstrap-overrides.css
@@ -684,8 +684,8 @@ table {
 
 .navbar {
     overflow: visible;
-     margin-bottom: 0;
-    height: 30px;
+    margin-bottom: 0;
+    height: 25px;
     width: 955px;
     filter: progid:DXImageTransform.Microsoft.gradient(startColorstr='#ffffff', endColorstr='#ffffff', GradientType=0);
     margin-right: auto;
@@ -696,12 +696,12 @@ table {
     padding-left: 10px;
     padding-right: 30px;
     background-color: #fff;
-    margin-top: 5px;
+    /*   margin-top: 5px;*/
+    margin-top: 0px;
 	background-image: none;
-	  -webkit-border-radius: 0;
-  -moz-border-radius: 0;
-  border-radius: 0;
-
+	-webkit-border-radius: 0;
+    -moz-border-radius: 0;
+    border-radius: 0;
 }
 
 .navbar .brand {
@@ -744,7 +744,7 @@ table {
 .navbar .nav > li > a {
     float: none;
     padding: 10px 10px 11px;
-    line-height: 19px;
+    line-height: 12px;
     color: #000;
     text-decoration: none;
     text-transform: uppercase;
@@ -1109,7 +1109,9 @@ a.thumbnail:hover {
 
     .headerbox {
         background-color: #fff;
-        padding: 10px 0 10px 0;
+        padding: 0px 0 10px 0;
+		/*padding: 10px 0 10px 0;*/
+
         margin-top: 0px;
         margin-bottom: 0px;
 
@@ -1424,3 +1426,9 @@ IMG.thumbnailwidth{
 }
 
 .download_links{  text-align:right; padding-right: 15px; padding-top:5px; }
+
+.blueline {
+    background-color: #6699cc;
+    width: 100%;
+    height: 8px;
+}
