--- a/app/views/advanced/index.html.erb
+++ b/app/views/advanced/index.html.erb
@@ -1,10 +1,28 @@
 <% @page_title = "Advanced Search - #{application_name}" %>
-<script type="text/javascript">
-  $(document).ready(function(){$("form.advanced input:first").focus();});
-</script>
 
-<h1 class="advanced">Advanced Search</h1>
-<%= render 'advanced_search_form' %>
-<%- sidebar_items << capture do -%>
-  <%= render "advanced_search_help" %>
-<%- end -%>
+  <div class="row-fluid">
+    <%= render :partial => '/catalog/facet_nav' %>
+
+    <div class="span9">
+      <h1>Search</h1>
+      <br/>
+
+      <div class="tabbable">
+        <ul class="nav nav-tabs">
+          <li><a href="/search">Basic Search</a></li>
+          <li class="active"><a href="/advanced">Advanced Search</a></li>
+        </ul>
+      </div>  <!-- class="tabbable" -->
+
+      <div class="row-fluid">
+        <div class="span8">
+				  <%= render 'advanced_search_form' %>
+				</div>
+
+				<div class="tooltip-demo well span3">
+					<%= render :partial => 'dca_text/advanced_search_tips' %>
+				</div>
+      </div>  <!-- class="row-fluid" -->
+
+    </div>  <!-- class="span9" -->
+  </div>  <!-- class="row-fluid" -->
