--- a/app/views/catalog/_facet_nav.html.erb
+++ b/app/views/catalog/_facet_nav.html.erb
@@ -4,10 +4,10 @@
 <!-- LEFT COLUMN FOR FACETS -->
          <div class="span3">
            <br>          
-           <%- if "index" == @current_action && false == has_search_parameters? -%>
+           <%- if "index" == @current_action && "advanced" != @current_controller && false == has_search_parameters? -%>
              <p><h6>Browse by:</h6></p>
            <%- else -%>
              <p><h6>Limit by:</h6></p>
            <%- end -%>
            <%= sidebar_items.join('').html_safe %>
-		</div>
+         </div>
