title page renderer

--- a/app/views/catalog/teireader.html.erb
+++ b/app/views/catalog/teireader.html.erb
@@ -1,4 +1,5 @@
 <!-- LEFT SIDE FOR OBJECT TITLE -->
+<% stylesheet_links << "tei/tei.css" %>
 <% metadata = Tufts::ModelMethods.get_metadata(@document_fedora) %>
 
 <div class="row">
