(TDLR-345) view online materials doesn't work from within finding aid

--- a/app/views/catalog/eadoverview.html.erb
+++ b/app/views/catalog/eadoverview.html.erb
@@ -192,7 +192,7 @@
 
   <div class="span3">
     <div class="tooltip-demo well">
-      <a href="#"><h5>View Online Materials <i class="icon-arrow-right margintoparrow"></i></h5></a>
+      <a href="/catalog?f[collection_id_facet][]=<%= params[:id] %>"><h5>View Online Materials <i class="icon-arrow-right margintoparrow"></i></h5></a>
       <p><a href="/contact">Contact DCA</a> to view materials that are not online.<p>
     </div>
   </div>
