scaffold for individual image overlay

--- a/app/views/catalog/teireader.html.erb
+++ b/app/views/catalog/teireader.html.erb
@@ -44,8 +44,27 @@
   </div>
 
 
-</div></div>
+</div>
 
+<!-Image Overlay Modal-->
+<div class="modal fade modal_650wide" id="myImageOverlay">
+  <div class="modal-header">
+    <a href="#">&lt; Back</a> <button class="close" data-dismiss="modal">×</button>
+
+  </div>
+
+
+  <div class="modal-body">
+ <img class="centerimage" src="assets/img/imageoverlay_placeholder.png" width="491" height="500">
+   <div class="pull-right"><h6><a hre="#">go to image entry <i class="icon-share"></i></a></h6></div>
+ The Goose and the Gridiron Citable <br>
+ 1866<br>
+ This image is a component of the text: Stories from the Streets of London
+
+   </div>
+
+
+</div>
 <!-Image Gallery Modal-->
 
 <div class="modal fade modal_800wide" id="myImageGallery">
