Added back the hidden_field_tag() line that I had removed.  It was necessary.

--- a/app/views/advanced/_advanced_search_form.html.erb
+++ b/app/views/advanced/_advanced_search_form.html.erb
@@ -9,6 +9,7 @@
   </div>        
   
   <div class="pull-right" style="margin-right: 80px">
+    <%= hidden_field_tag(:search_field, BlacklightAdvancedSearch.config[:url_key]) %>
     <%= submit_tag 'Search', :class=>'btn btn-primary', :id=>'advanced_search' %>
     <%= link_to "Clear form", {:controller => "advanced", :action => "index"}, :class =>"btn" %>
   </div>
